--- a/application.yaml
+++ b/application.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/vinver1981/argocd.git
     targetRevision: main  # Branch, tag, or commit SHA to deploy
-    path: .  # Optional: path within the repo where the manifests are located
+    path: /  # Optional: path within the repo where the manifests are located
   #project: default  # Argo CD project name
   
   destination:
